[tool.poetry]
name = "module-5"
version = "0.1.0"
description = ""
authors = ["AnatoliiBrovko <116496024+AnatoliiBrovko@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "module_5"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
